# autocomplete

./: LICENSE  index.html  index.js
server/: dataset-reduzido.txt  pyproject.toml
server/api/: main.py
server/autocomplete/: index.py  trie.py
